--- a/Blik Mac/GLAFileCollectionViewController.xib
+++ b/Blik Mac/GLAFileCollectionViewController.xib
@@ -54,40 +54,66 @@
                                                         </textFieldCell>
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
-                                                            <tableCellView placeholderIntrinsicWidth="116" placeholderIntrinsicHeight="32" id="0nT-Kb-GeN">
+                                                            <tableCellView identifier="group" placeholderIntrinsicWidth="116" placeholderIntrinsicHeight="32" id="0nT-Kb-GeN">
                                                                 <rect key="frame" x="1" y="1" width="177" height="27"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="KcS-Xl-css">
-                                                                        <rect key="frame" x="34" y="4" width="145" height="23"/>
+                                                                        <rect key="frame" x="18" y="4" width="161" height="23"/>
                                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="sQ8-J7-d7J">
                                                                             <font key="font" size="13" name="AvenirNext-Medium"/>
                                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                         </textFieldCell>
                                                                     </textField>
-                                                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5dg-40-8VZ">
-                                                                        <rect key="frame" x="12" y="6" width="16" height="16"/>
-                                                                        <constraints>
-                                                                            <constraint firstAttribute="height" constant="16" id="Fhr-u9-TiG"/>
-                                                                            <constraint firstAttribute="width" constant="16" id="LyU-fd-cgj"/>
-                                                                        </constraints>
-                                                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Po4-Hf-AsA"/>
-                                                                    </imageView>
                                                                 </subviews>
                                                                 <constraints>
-                                                                    <constraint firstItem="KcS-Xl-css" firstAttribute="leading" secondItem="5dg-40-8VZ" secondAttribute="trailing" constant="8" id="MRl-K4-aPw"/>
-                                                                    <constraint firstAttribute="centerY" secondItem="5dg-40-8VZ" secondAttribute="centerY" id="W08-ob-e68"/>
-                                                                    <constraint firstItem="KcS-Xl-css" firstAttribute="centerY" secondItem="5dg-40-8VZ" secondAttribute="centerY" constant="-2" id="oxo-GX-UvH"/>
+                                                                    <constraint firstItem="KcS-Xl-css" firstAttribute="leading" secondItem="0nT-Kb-GeN" secondAttribute="leading" constant="20" symbolic="YES" id="4UR-Hz-Vu1"/>
+                                                                    <constraint firstAttribute="centerY" secondItem="KcS-Xl-css" secondAttribute="centerY" constant="2" id="dEe-3r-iOL"/>
                                                                     <constraint firstAttribute="trailing" secondItem="KcS-Xl-css" secondAttribute="trailing" id="xXa-7q-vAI"/>
-                                                                    <constraint firstItem="5dg-40-8VZ" firstAttribute="leading" secondItem="0nT-Kb-GeN" secondAttribute="leading" constant="12" id="yaQ-eD-tuY"/>
                                                                 </constraints>
                                                                 <connections>
-                                                                    <outlet property="imageView" destination="5dg-40-8VZ" id="dz9-Lx-3xc"/>
                                                                     <outlet property="textField" destination="KcS-Xl-css" id="1nB-Qz-5lL"/>
                                                                 </connections>
                                                             </tableCellView>
+                                                            <tableCellView identifier="collectedFile" placeholderIntrinsicWidth="116" placeholderIntrinsicHeight="32" id="Ewx-kx-foZ">
+                                                                <rect key="frame" x="1" y="1" width="177" height="27"/>
+                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                <subviews>
+                                                                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="a6i-8q-QKU">
+                                                                        <rect key="frame" x="34" y="4" width="145" height="23"/>
+                                                                        <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="ok1-l5-fkZ">
+                                                                            <font key="font" size="13" name="AvenirNext-Medium"/>
+                                                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                        </textFieldCell>
+                                                                    </textField>
+                                                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1j3-nr-TPY">
+                                                                        <rect key="frame" x="12" y="6" width="16" height="16"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="16" id="kyX-Yh-fpp"/>
+                                                                            <constraint firstAttribute="width" constant="16" id="ncS-qR-mMb"/>
+                                                                        </constraints>
+                                                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="ZRM-KP-s17"/>
+                                                                    </imageView>
+                                                                </subviews>
+                                                                <constraints>
+                                                                    <constraint firstItem="a6i-8q-QKU" firstAttribute="leading" secondItem="1j3-nr-TPY" secondAttribute="trailing" constant="8" id="E4A-yz-YGR"/>
+                                                                    <constraint firstAttribute="centerY" secondItem="1j3-nr-TPY" secondAttribute="centerY" id="PkS-Bp-Cwa"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="a6i-8q-QKU" secondAttribute="trailing" id="gfE-aF-4Ue"/>
+                                                                    <constraint firstItem="a6i-8q-QKU" firstAttribute="centerY" secondItem="1j3-nr-TPY" secondAttribute="centerY" constant="-2" id="o3l-sl-Bvv"/>
+                                                                    <constraint firstItem="1j3-nr-TPY" firstAttribute="leading" secondItem="Ewx-kx-foZ" secondAttribute="leading" constant="12" id="u1k-kE-8eh"/>
+                                                                </constraints>
+                                                                <connections>
+                                                                    <outlet property="imageView" destination="1j3-nr-TPY" id="2YV-MG-Me1"/>
+                                                                    <outlet property="textField" destination="a6i-8q-QKU" id="hT0-fn-kvv"/>
+                                                                </connections>
+                                                            </tableCellView>
                                                             <customView identifier="NSTableViewRowViewKey" id="dvA-we-tIg" customClass="GLATableContentRowView">
+                                                                <rect key="frame" x="1" y="30" width="177" height="39"/>
+                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                            </customView>
+                                                            <customView identifier="blik.groupRowViewKey" id="yM1-mD-waY" customClass="GLATableContentRowView">
                                                                 <rect key="frame" x="1" y="30" width="177" height="39"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             </customView>
