--- a/Blik Mac/GLAProjectEditPrimaryFoldersViewController.xib
+++ b/Blik Mac/GLAProjectEditPrimaryFoldersViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
@@ -8,6 +8,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="GLAProjectEditPrimaryFoldersViewController">
             <connections>
                 <outlet property="addFoldersButton" destination="3XD-GW-tQe" id="Bpv-H6-83J"/>
+                <outlet property="instructionsViewController" destination="pUk-VA-533" id="UFp-Ka-aGq"/>
                 <outlet property="mainHolderView" destination="qHs-AR-359" id="uiD-LQ-DJm"/>
                 <outlet property="mainHolderViewController" destination="gMM-aO-7LN" id="IqX-nc-iAa"/>
                 <outlet property="mainLabel" destination="3bW-HV-eiW" id="u9n-jp-pp4"/>
@@ -216,5 +217,33 @@
             </items>
             <point key="canvasLocation" x="519" y="507.5"/>
         </menu>
+        <viewController title="Instructions View Controller" id="pUk-VA-533" customClass="GLAProjectInstructionsViewController">
+            <connections>
+                <outlet property="mainTextLabel" destination="Jdc-YU-pLl" id="eqN-O4-c6T"/>
+                <outlet property="view" destination="Zwd-ik-SA5" id="NeZ-It-cYU"/>
+            </connections>
+        </viewController>
+        <customView id="Zwd-ik-SA5">
+            <rect key="frame" x="0.0" y="0.0" width="300" height="84"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <subviews>
+                <textField setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jdc-YU-pLl">
+                    <rect key="frame" x="36" y="8" width="214" height="69"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="210" id="B8V-0t-X5e"/>
+                    </constraints>
+                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Primary folders are the main master folders that hold the rest of your files and folders." id="fOQ-zs-pEH">
+                        <font key="font" size="13" name="AvenirNext-MediumItalic"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+            </subviews>
+            <constraints>
+                <constraint firstAttribute="centerX" secondItem="Jdc-YU-pLl" secondAttribute="centerX" constant="7" id="hou-ne-SDR"/>
+                <constraint firstAttribute="centerY" secondItem="Jdc-YU-pLl" secondAttribute="centerY" constant="0.5" id="noW-es-hNG"/>
+            </constraints>
+            <point key="canvasLocation" x="-211" y="493"/>
+        </customView>
     </objects>
 </document>
