--- a/Blik Mac/GLAFileCollectionViewController.xib
+++ b/Blik Mac/GLAFileCollectionViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
@@ -29,7 +29,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="180" height="272"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <subviews>
-                                <scrollView verticalHuggingPriority="750" borderType="none" autohidesScrollers="YES" horizontalLineScroll="34" horizontalPageScroll="10" verticalLineScroll="34" verticalPageScroll="36" hasHorizontalScroller="NO" horizontalScrollElasticity="none" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="G7e-U8-1HC">
+                                <scrollView verticalHuggingPriority="750" borderType="none" horizontalLineScroll="34" horizontalPageScroll="10" verticalLineScroll="34" verticalPageScroll="36" hasHorizontalScroller="NO" horizontalScrollElasticity="none" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="G7e-U8-1HC">
                                     <rect key="frame" x="0.0" y="40" width="180" height="232"/>
                                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="FKf-XF-kgf">
                                         <rect key="frame" x="0.0" y="0.0" width="171" height="240"/>
@@ -128,7 +128,7 @@
                                         <rect key="frame" x="-100" y="-100" width="223" height="15"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                     </scroller>
-                                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="qa6-qD-4tk">
+                                    <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="qa6-qD-4tk">
                                         <autoresizingMask key="autoresizingMask"/>
                                     </scroller>
                                 </scrollView>
