--- a/Blik Mac/GLAProjectViewController.xib
+++ b/Blik Mac/GLAProjectViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
     <objects>
@@ -85,6 +86,7 @@
             <connections>
                 <outlet property="contextualMenu" destination="Vkd-RN-V0D" id="99Y-nb-wbQ"/>
                 <outlet property="instructionsViewController" destination="bNf-jR-Sti" id="Tir-3F-xV0"/>
+                <outlet property="openAllHighlightsButton" destination="LJn-o5-zPf" id="pxM-EH-1uH"/>
                 <outlet property="openerApplicationMenu" destination="gy9-Mo-SHK" id="CqZ-Wu-YgD"/>
                 <outlet property="parentViewController" destination="-2" id="kAI-Y6-LNm"/>
                 <outlet property="preferredOpenerApplicationMenu" destination="bqf-4d-QNw" id="D7f-kU-wlf"/>
@@ -296,14 +298,14 @@
         <viewController title="Collections List Instructions" id="5dd-3O-WRK" customClass="GLAInstructionsViewController">
             <connections>
                 <outlet property="headingTextLabel" destination="OSI-F3-63a" id="ghG-87-0vV"/>
-                <outlet property="mainTextLabel" destination="chl-Vp-HVE" id="tfU-7z-DS0"/>
+                <outlet property="secondaryTextLabel" destination="chl-Vp-HVE" id="37N-ld-o29"/>
                 <outlet property="view" destination="Idz-io-wKr" id="EYu-4j-kHe"/>
             </connections>
         </viewController>
         <viewController title="Highlights List Instructions" id="bNf-jR-Sti" customClass="GLAInstructionsViewController">
             <connections>
                 <outlet property="headingTextLabel" destination="M4I-tR-hcL" id="9kM-GL-e6S"/>
-                <outlet property="mainTextLabel" destination="kal-bU-mMW" id="x48-3M-7hC"/>
+                <outlet property="secondaryTextLabel" destination="kal-bU-mMW" id="5IN-I5-phj"/>
                 <outlet property="view" destination="OZm-di-0Uz" id="jOR-Lo-xCd"/>
             </connections>
         </viewController>
@@ -323,7 +325,7 @@
                     </connections>
                 </menuItem>
             </items>
-            <point key="canvasLocation" x="160.5" y="-165.5"/>
+            <point key="canvasLocation" x="331.5" y="-216.5"/>
         </menu>
         <customView placeholderIntrinsicWidth="500" placeholderIntrinsicHeight="30" id="xFc-GO-dGI" customClass="GLAView">
             <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
@@ -393,7 +395,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="chl-Vp-HVE">
-                    <rect key="frame" x="18" y="64" width="201" height="69"/>
+                    <rect key="frame" x="18" y="65" width="201" height="69"/>
                     <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Collect similar files &amp; folders together, even from separate locations or cloud folders." id="Pd7-v0-Fcz">
                         <font key="font" size="13" name="AvenirNext-MediumItalic"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -401,7 +403,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="OSI-F3-63a">
-                    <rect key="frame" x="18" y="141" width="81" height="25"/>
+                    <rect key="frame" x="18" y="142" width="81" height="25"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Collections" id="47t-aB-xfq">
                         <font key="font" size="15" name="AvenirNext-MediumItalic"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -410,20 +412,20 @@
                 </textField>
             </subviews>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="chl-Vp-HVE" secondAttribute="centerY" constant="-1" id="AHr-e5-vOl"/>
+                <constraint firstAttribute="centerY" secondItem="chl-Vp-HVE" secondAttribute="centerY" id="AHr-e5-vOl"/>
                 <constraint firstAttribute="trailing" secondItem="chl-Vp-HVE" secondAttribute="trailing" id="N3E-7p-ov8"/>
                 <constraint firstItem="chl-Vp-HVE" firstAttribute="leading" secondItem="Idz-io-wKr" secondAttribute="leading" constant="20" id="NEm-DX-azq"/>
                 <constraint firstItem="chl-Vp-HVE" firstAttribute="top" secondItem="OSI-F3-63a" secondAttribute="bottom" constant="8" id="OEg-P6-iTz"/>
                 <constraint firstItem="OSI-F3-63a" firstAttribute="leading" secondItem="Idz-io-wKr" secondAttribute="leading" constant="20" id="qo4-qf-cl1"/>
             </constraints>
-            <point key="canvasLocation" x="-346.5" y="-155.5"/>
+            <point key="canvasLocation" x="46.5" y="-209.5"/>
         </customView>
         <customView identifier="highlightsListInstructions" id="OZm-di-0Uz" userLabel="Highlights Instructions">
             <rect key="frame" x="0.0" y="0.0" width="250" height="199"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kal-bU-mMW">
-                    <rect key="frame" x="18" y="86" width="214" height="69"/>
+                    <rect key="frame" x="18" y="65" width="214" height="69"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="210" id="OhI-J3-OPk"/>
                     </constraints>
@@ -434,7 +436,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="M4I-tR-hcL">
-                    <rect key="frame" x="157" y="163" width="75" height="25"/>
+                    <rect key="frame" x="157" y="142" width="75" height="25"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Highlights" id="qb6-Ko-72d">
                         <font key="font" size="15" name="AvenirNext-MediumItalic"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -445,7 +447,7 @@
             <constraints>
                 <constraint firstItem="M4I-tR-hcL" firstAttribute="trailing" secondItem="kal-bU-mMW" secondAttribute="trailing" id="2Bu-V5-OeW"/>
                 <constraint firstItem="kal-bU-mMW" firstAttribute="top" secondItem="M4I-tR-hcL" secondAttribute="bottom" constant="8" id="BEq-UC-XU5"/>
-                <constraint firstAttribute="centerY" secondItem="kal-bU-mMW" secondAttribute="centerY" constant="21" id="NyD-na-nvt"/>
+                <constraint firstAttribute="centerY" secondItem="kal-bU-mMW" secondAttribute="centerY" id="NyD-na-nvt"/>
                 <constraint firstItem="kal-bU-mMW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="OZm-di-0Uz" secondAttribute="leading" constant="20" id="bMe-hd-luO"/>
                 <constraint firstAttribute="trailing" secondItem="kal-bU-mMW" secondAttribute="trailing" constant="20" symbolic="YES" id="e3h-pu-8iC"/>
             </constraints>
